services/aemo-v6y/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aemo-v6y
  labels:
    name: aemo-v6y
    app: aemo-v6y
