services/aemo-v6y/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aemo-v6y-service
  namespace: aemo-v6y
  labels:
    app: aemo-v6y
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: aemo-v6y
